Remove custom file manager from javac demo